# Harness

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_GUIDE.md  MANIFESTO.md  Makefile  README.md  SKILL.md  debug.md  pyproject.toml
.claude-plugin/: plugin.json
.pm/runtime/: acceptance-review.md  handoff.md  loop-log.md  next-task.md  state.yaml  worker-report.md
buffer/: blog_v2_upgrade.md  deepseek.md  glm.md  harness_v_2_综合实施计划.md  v3_arch.md  v3_cache.md  v3_entry.md  v3_review.md
buffer/templates/: BLAST_RADIUS_POLICY.md  PRD_TEMPLATE.md  ROLE_POLICY.md
harness_runtime/: cli.py  context.py  evals.py  installer.py  risk.py  verify.py
references/: AUTOPILOT_RULES.md  CACHE_GUIDE.md  GETTING_STARTED.md  PHASE_DETECTION.md  ROUTING_TABLE.md
references/licenses/: MIT-superpowers-systematic-debugging.txt
references/policies/: blast-radius.yaml  cache-context.yaml  gates.yaml  project_index.yaml
references/templates/: CONSTITUTION_TEMPLATE.md  DEBUG_INDEX_TEMPLATE.md  DEBUG_RECORD_TEMPLATE.md  EVAL_TEMPLATE.md  PLAN_TEMPLATE.md  TASKS_TEMPLATE.md
reports/: USER_JOURNEY_AUDIT_v3.0.0.md  USER_JOURNEY_AUDIT_v3.0.0_r2.md
resources/policies/: blast-radius.yaml
scripts/: classify-risk.sh  link-skills.sh  verify-ai.sh
scripts/harness_runtime/: cli.py  installer.py  mermaid_verify.py  pm_runtime.py  risk.py  semantic_atlas.py
skills/engineering/: README.md
skills/misc/: README.md
skills/productivity/: README.md
templates/: .pre-commit-config.yaml  AGENTS.md
tests/: test_mermaid_verify.py  test_pm_runtime.py  test_semantic_atlas.py  test_smoke.py
(+72 files in other folders)
